Change kanjialive icon to jpg

--- a/app/views/kanji/next.html.erb
+++ b/app/views/kanji/next.html.erb
@@ -38,7 +38,7 @@
   <div class="resources">
     <%= link_to("https://app.kanjialive.com/#{@next_kanji}", target: "_blank", title: "Kanjialive kanji search") do %>
       <span class="resource-name">Kanjialive</span>
-      <%= image_tag "resource_icons/kanjialive.jpeg" %>
+      <%= image_tag "resource_icons/kanjialive.jpg" %>
     <% end %>
     <%= link_to("https://www.japandict.com/kanji/#{@next_kanji}", target: "_blank", title: "JapanDict kanji search") do %>
       <span class="resource-name">JapanDict</span>
