--- a/app/assets/stylesheets/jpstudy/shared.scss
+++ b/app/assets/stylesheets/jpstudy/shared.scss
@@ -17,7 +17,8 @@ nav {
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
   // == medium box shadow
   // box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-  a, button {
+  a, button,
+  .logout-button {
     float: left;
     color: white;
     text-align: center;
@@ -79,7 +80,7 @@ nav {
   .right-links {
     float: right;
     width: fit-content;
-    button {
+    .logout-button {
       -webkit-appearance: none;
     }
   }
