Set icon-subtext size and weight exactly

--- a/app/assets/stylesheets/jpstudy/shared.scss
+++ b/app/assets/stylesheets/jpstudy/shared.scss
@@ -84,6 +84,10 @@ nav {
       height: 50px;
       overflow: hidden;
       -webkit-appearance: none;
+      .icon-subtext {
+        font-size: 0.7em;
+        font-weight: 400;
+      }
     }
   }
   @media (max-width: 500px) {
