Add added_to_list_at to Kanji
* Include new field in import and export
* Use new field for ordering
* Add user stats using new field
* Add kanji user study targets
* Add some initial kanji controller tests for download and upload actions

--- a/app/views/kanji/import.html.erb
+++ b/app/views/kanji/import.html.erb
@@ -8,6 +8,7 @@
   <ul class="csv-format">
     <li>[0]<strong>Character</strong></li>
     <li>[1]Status (added/skipped)</li>
+    <li>[1]Added to list on (mm/dd/yyyy)</li>
   </ul>
 
   <%= form_tag(upload_kanji_path, method: :post, multipart: true, class: "import-csv-form") do %>
