Add kanji back / undo button

--- a/app/assets/stylesheets/jpstudy/kanji.scss
+++ b/app/assets/stylesheets/jpstudy/kanji.scss
@@ -115,9 +115,14 @@
     button {
       display: inline-block;
       margin: 0px 4px;
+      .back-button-icon {
+        opacity: 0.7;
+        height: 24px;
+        margin: -2px -2px -6px -6px;
+      }
       .skip-button-icon {
         height: 17px;
-        margin: -2px 0px -3px -4px;
+        margin: -2px 0px -3px -3px;
       }
       .add-button-icon {
         height: 24px;
