--- a/app/views/kanji/next.html.erb
+++ b/app/views/kanji/next.html.erb
@@ -14,7 +14,7 @@
           <%= heroicon "check", variant: :outline, options: { class: "kanji-coppied-icon", "data-kanji-target" => "checkIcon" } %>
         </button>
         <span class="character" data-kanji-target="character">
-          <%= @next_kanji %>
+          <%= @next_kanji.character %>
         <span>
       </div>
     <% else %>
@@ -25,32 +25,41 @@
   </div>
 
   <div class="actions">
-    <%= button_to(delete_kanji_path(@previous_kanji), class: "basic-button", method: :delete, title: "Remove the last kanji that was #{@previous_kanji&.status == Kanji::SKIPPED_STATUS ? "skipped" : "added"}", data: { controller: "disable", disable_with_value: "Undoing...", action: "disable#disableButton", disable_target: "button" }, disabled: @previous_kanji.nil?) do %>
+    <%= button_to(delete_kanji_path(@previous_kanji || 0), class: "basic-button", method: :delete, title: "Remove the last kanji that was #{@previous_kanji&.status == Kanji::SKIPPED_STATUS ? "skipped" : "added"}", data: { controller: "disable", disable_with_value: "Undoing...", action: "disable#disableButton", disable_target: "button" }, disabled: @previous_kanji.nil?) do %>
       <%= heroicon "rewind", options: { class: "back-button-icon" } %>
       Undo
     <% end %>
-    <%= button_to(kanji_path, class: "button-pink", method: :post, params: { kanji: { character: @next_kanji, status: Kanji::SKIPPED_STATUS } }, data: { controller: "disable", disable_with_value: "Skipping...", action: "disable#disableButton", disable_target: "button" }, disabled: @next_kanji.nil?) do %>
+    <%= button_to(kanji_path, class: "button-pink", method: :post, params: { kanji: { character: @next_kanji.character, status: Kanji::SKIPPED_STATUS } }, data: { controller: "disable", disable_with_value: "Skipping...", action: "disable#disableButton", disable_target: "button" }, disabled: @next_kanji.nil?) do %>
       <%= heroicon "eye-off", variant: :outline, options: { class: "skip-button-icon" } %>
       Skip
     <% end %>
-    <%= button_to(kanji_path, class: "button-purple", method: :post, params: { kanji: { character: @next_kanji, status: Kanji::ADDED_STATUS } }, data: { controller: "disable", disable_with_value: "Adding...", action: "disable#disableButton", disable_target: "button" }, disabled: @next_kanji.nil?) do %>
+    <%= button_to(kanji_path, class: "button-purple", method: :post, params: { kanji: { character: @next_kanji.character, status: Kanji::ADDED_STATUS } }, data: { controller: "disable", disable_with_value: "Adding...", action: "disable#disableButton", disable_target: "button" }, disabled: @next_kanji.nil?) do %>
       <%= heroicon "plus", options: { class: "add-button-icon" } %>
       Add
     <% end %>
   </div>
 
-  <div class="resources">
-    <%= link_to("https://app.kanjialive.com/#{@next_kanji}", target: "_blank", title: "Kanjialive kanji search") do %>
-      <span class="resource-name">Kanjialive</span>
-      <%= image_tag "resource_icons/kanjialive.jpg" %>
+  <div class="kanji-resources">
+    <% if @next_kanji %>
+      <%= link_to("https://app.kanjialive.com/#{@next_kanji.character}", target: "_blank", title: "Kanjialive kanji search") do %>
+        <span class="resource-name">Kanjialive</span>
+        <%= image_tag "resource_icons/kanjialive.jpg" %>
+      <% end %>
+      <%= link_to("https://www.japandict.com/kanji/#{@next_kanji.character}", target: "_blank", title: "JapanDict kanji search") do %>
+        <span class="resource-name">JapanDict</span>
+        <%= image_tag "resource_icons/japandict.png" %>
+      <% end %>
+      <%= link_to("https://en.wiktionary.org/wiki/#{@next_kanji.character}#Japanese", target: "_blank", title: "Wiktionary kanji search") do %>
+        <span class="resource-name">Wictionary</span>
+        <%= image_tag "resource_icons/wictionary.png" %>
+      <% end %>
     <% end %>
-    <%= link_to("https://www.japandict.com/kanji/#{@next_kanji}", target: "_blank", title: "JapanDict kanji search") do %>
-      <span class="resource-name">JapanDict</span>
-      <%= image_tag "resource_icons/japandict.png" %>
-    <% end %>
-    <%= link_to("https://en.wiktionary.org/wiki/#{@next_kanji}#Japanese", target: "_blank", title: "Wiktionary kanji search") do %>
-      <span class="resource-name">Wictionary</span>
-      <%= image_tag "resource_icons/wictionary.png" %>
+  </div>
+
+  <div class="as-seen-in">
+    <% if @as_seen_in_words.any? %>
+      <h3>As seen in:</h3>
+      <%= render partial: "words/word", collection: @as_seen_in_words, cached: true %>
     <% end %>
   </div>
 </div>
