--- a/app/assets/stylesheets/jpstudy/kanji.scss
+++ b/app/assets/stylesheets/jpstudy/kanji.scss
@@ -146,8 +146,9 @@
       }
       img {
         margin-top: 6px;
-        width: 38px;
-        opacity: 0.7;
+        width: 35px;
+        opacity: 0.8;
+        filter: saturate(0);
       }
       &:hover {
         .resource-name {
@@ -155,16 +156,12 @@
         }
         img {
           opacity: 1;
+          filter: saturate(1);
         }
       }
     }
   }
   .as-seen-in {
-    margin: 40px 0px 20px 0px;
-    h3 {
-      color: #9CA3AF;
-      margin: 0px;
-      font-weight: 400;
-    }
+    margin: 65px 0px 20px 0px;
   }
 }
