--- a/app/views/kanji/next.html.erb
+++ b/app/views/kanji/next.html.erb
@@ -29,11 +29,11 @@
       <%= heroicon "rewind", options: { class: "back-button-icon" } %>
       Undo
     <% end %>
-    <%= button_to(kanji_path, class: "button-pink", method: :post, params: { kanji: { character: @next_kanji.character, status: Kanji::SKIPPED_STATUS } }, data: { controller: "disable", disable_with_value: "Skipping...", action: "disable#disableButton", disable_target: "button" }, disabled: @next_kanji.nil?) do %>
+    <%= button_to(kanji_path, class: "button-pink", method: :post, params: { kanji: { character: @next_kanji&.character, status: Kanji::SKIPPED_STATUS } }, data: { controller: "disable", disable_with_value: "Skipping...", action: "disable#disableButton", disable_target: "button" }, disabled: @next_kanji.nil?) do %>
       <%= heroicon "eye-off", variant: :outline, options: { class: "skip-button-icon" } %>
       Skip
     <% end %>
-    <%= button_to(kanji_path, class: "button-purple", method: :post, params: { kanji: { character: @next_kanji.character, status: Kanji::ADDED_STATUS } }, data: { controller: "disable", disable_with_value: "Adding...", action: "disable#disableButton", disable_target: "button" }, disabled: @next_kanji.nil?) do %>
+    <%= button_to(kanji_path, class: "button-purple", method: :post, params: { kanji: { character: @next_kanji&.character, status: Kanji::ADDED_STATUS } }, data: { controller: "disable", disable_with_value: "Adding...", action: "disable#disableButton", disable_target: "button" }, disabled: @next_kanji.nil?) do %>
       <%= heroicon "plus", options: { class: "add-button-icon" } %>
       Add
     <% end %>
