Switch search and stats keyboard shortcuts back to their original bindings

--- a/app/views/static_pages/keyboard_shortcuts.html.erb
+++ b/app/views/static_pages/keyboard_shortcuts.html.erb
@@ -12,8 +12,8 @@
     <li>w <%= heroicon "arrow-narrow-right" %> word list</li>
     <li>c <%= heroicon "arrow-narrow-right" %> word list + card filters</li>
     <li>n <%= heroicon "arrow-narrow-right" %> new word</li>
-    <li>s <%= heroicon "arrow-narrow-right" %> word search</li>
-    <li>t <%= heroicon "arrow-narrow-right" %> user stats</li>
+    <li>f <%= heroicon "arrow-narrow-right" %> word search</li>
+    <li>s <%= heroicon "arrow-narrow-right" %> user stats</li>
     <li>k <%= heroicon "arrow-narrow-right" %> next kanji</li>
     <li>i <%= heroicon "arrow-narrow-right" %> import/export tools</li>
     <li>e <%= heroicon "arrow-narrow-right" %> import/export tools</li>
