Email copy clarification

--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -1,7 +1,7 @@
 <p style="max-width:700px;padding-bottom:20px;">
   Welcome to jpstudy, <%= @user.username %>. You now have a jpstudy.app account
   registered under this email address. To verify your email and access your
-  account, please follow this link:
+  account, please log in using this link:
 </p>
 <p>
   <table align="center" class="button-container" style="padding-bottom:20px;">
