Let the user know with a flash when word and kanji targets have been reached
- Add a couple turbo_stream format tests to words controller test suite

--- a/app/views/users/stats.html.erb
+++ b/app/views/users/stats.html.erb
@@ -46,6 +46,7 @@
     </p>
     <p>
       <strong>Cards created today:</strong>
+      <%# show a green number if the user has reached or exceeded their daily word target %>
       <% if @current_user.daily_word_target && @words_with_cards_created_today >= @current_user.daily_word_target %>
         <strong class="success-green">
           <%= @words_with_cards_created_today %>
@@ -101,6 +102,7 @@
     </p>
     <p>
       <strong>Kanji added today:</strong>
+       <%# show a green number if the user has reached or exceeded their daily kanji target %>
       <% if @current_user.daily_kanji_target && @kanji_added_today >= @current_user.daily_kanji_target %>
         <strong class="success-green">
           <%= @kanji_added_today %>
