--- a/app/assets/stylesheets/jpstudy/shared.scss
+++ b/app/assets/stylesheets/jpstudy/shared.scss
@@ -184,6 +184,7 @@ footer {
   border-radius: 4px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   margin-bottom: 8px;
+  overflow: hidden; // for collapse animation
   &:last-child {
     margin-bottom: 25px;
   }
