--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -54,7 +54,7 @@
       <p>
         A monthly subscription is required to unlock full access to the site after
         your free trial. Your payment information is processed and stored by
-        <a href="https://squareup.com/us/en/legal/general/buyer-features" target="_blank" class="link-blue">Square</a>
+        <a href="https://squareup.com/us/en/legal/general/buyer-features" target="_blank" rel="noopener noreferrer" class="link-blue">Square</a>
         and is not accessed by this site. You may cancel your subscription at any time.
       </p>
       <p>
@@ -66,7 +66,7 @@
         <%= @user.active_subscription.next_charge_date.strftime("%m/%d/%Y") %>
       </p>
       <div>
-        <a href="<%= @user.active_subscription.self_management_link %>" class="square-button manage-subscription-button" target="_blank">
+        <a href="<%= @user.active_subscription.self_management_link %>" class="square-button manage-subscription-button" target="_blank" rel="noopener noreferrer">
           Manage subscription with Square
         </a>
       </div>
@@ -75,7 +75,7 @@
       <p>
         To unlock full access to the site after your free trial, you can subscribe
         for $1.00 a month. Your payment information is processed and stored by
-        <a href="https://squareup.com/us/en/legal/general/buyer-features" target="_blank">Square</a>
+        <a href="https://squareup.com/us/en/legal/general/buyer-features" target="_blank" rel="noopener noreferrer">Square</a>
         and is not accessed by this site. You may cancel your subscription at any time.
       </p>
 
