--- a/app/assets/stylesheets/jpstudy/shared.scss
+++ b/app/assets/stylesheets/jpstudy/shared.scss
@@ -184,7 +184,15 @@ footer {
   border-radius: 4px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   margin-bottom: 8px;
-  overflow: hidden; // for collapse animation
+
+  // styling specifically for auto-collapsable flash
+  &[data-flash-hide-in-ms-value] {
+    overflow: hidden; // required for collapse animation
+    position: absolute;
+    width: calc(100% - 24px); // account for page padding
+    max-width: 700px;
+  }
+
   &:last-child {
     margin-bottom: 25px;
   }
