--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -96,6 +96,13 @@ http {
       add_header ETag "";
     }
 
+    location /cable {
+      proxy_pass http://app_server;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "Upgrade";
+    }
+
     location / {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Real-IP $remote_addr;
