--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -97,10 +97,16 @@ http {
     }
 
     location /cable {
-      proxy_pass http://app_server;
       proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "Upgrade";
+      proxy_set_header Upgrade websocket;
+      proxy_set_header Connection Upgrade;
+
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Request-Start "t=${msec}";
+      proxy_set_header Host $http_host;
+      proxy_pass http://app_server/cable;
+      proxy_redirect off;
     }
 
     location / {
