Sort by created at and id as well

--- a/app/views/words/_word.html.erb
+++ b/app/views/words/_word.html.erb
@@ -7,7 +7,9 @@
     data-word-apply-js-filters-value="<%= (defined?(apply_js_filters) && apply_js_filters) || false %>"
     data-word-japanese-word-value="<%= word.japanese %>"
     data-word-english-word-value="<%= word.english %>"
-    data-word-added-on-value="<%= word.added_to_list_on %>"
+    data-word-added-at-value="<%= word.added_to_list_at %>"
+    data-word-created-at-value="<%= word.created_at %>"
+    data-word-database-id-value="<%= word.id %>"
     data-word-target="wordCard"
   >
     <div class="delete">
