Use page outdated notice instead of flash on kanji outdated

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,7 @@
     <main>
       <section class="page-content" data-controller="keyboard-shortcuts">
         <%= render "flashes" %>
+        <%= render "page_outdated" %>
         <%= yield %>
       </section>
     </main>
