--- a/app/assets/stylesheets/jpstudy/shared.scss
+++ b/app/assets/stylesheets/jpstudy/shared.scss
@@ -209,29 +209,56 @@ footer {
   &.success {
     background-color: #34D399;
   }
-  .close-flash-button {
-    -webkit-appearance: none;
-    color: #111827;
-    background-color: rgba(243, 244, 246, 0.5); // #F3F4F6
-    border: none;
-    opacity: 0.6;
+}
 
-    border-radius: 50px;
-    width: fit-content;
-    height: fit-content;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    float: right;
-    padding: 2px;
-    margin: 4px;
+.close-flash-button {
+  -webkit-appearance: none;
+  color: #111827;
+  background-color: rgba(243, 244, 246, 0.5); // #F3F4F6
+  border: none;
+  opacity: 0.6;
 
-    &:hover {
-      cursor: pointer;
-      opacity: 1;
-    }
-    .icon-solid {
-      height: 16px;
+  border-radius: 50px;
+  width: fit-content;
+  height: fit-content;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  float: right;
+  padding: 2px;
+  margin: 4px;
+
+  &:hover {
+    cursor: pointer;
+    opacity: 1;
+  }
+  .icon-solid {
+    height: 16px;
+  }
+}
+
+.page-outdated-container {
+  display: flex;
+  position: absolute;
+  z-index: 100;
+  max-width: 700px;
+  width: calc(100% - 24px); // account for page padding
+  justify-content: flex-end;
+
+  .page-outdated-notice {
+    background-color: #f472b6;
+    color:  white;
+    border-radius: 8px;
+    font-size: 0.9em;
+    font-weight: 400;
+    width: 234px;
+    padding: 10px 18px;
+    line-height: 1.3;
+    box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.1) 0px 8px 10px -6px;
+    p { margin: 0px; }
+    a { color: white; }
+    .close-flash-button {
+      margin: -5px -12px 0px 0px;
     }
   }
 }
