--- a/app/views/words/_word.html.erb
+++ b/app/views/words/_word.html.erb
@@ -11,6 +11,7 @@
     data-word-created-at-value="<%= word.created_at %>"
     data-word-database-id-value="<%= word.id %>"
     data-word-target="wordCard"
+    data-last-update="<%= Time.now.utc %>"
   >
     <div class="delete">
       <%= button_to(word_path(word), method: :delete, data: { controller: "confirmation", confirmation_message_value: "Are you sure you want to delete '#{word.japanese}'? This action is permanent and cannot be undone.", action: "confirmation#confirm", turbo: !(defined?(delete_without_turbo) && delete_without_turbo) }) do %>
