--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -19,7 +19,9 @@
 
     <%= render "words/noscript/page_number" %>
     <%= turbo_frame_tag "words_#{@page}" do %>
-      <%= turbo_stream_from @current_user.words_stream_name %>
+      <% unless ENV["DISABLE_WEBSOCKETS"] %>
+        <%= turbo_stream_from @current_user.words_stream_name %>
+      <% end %>
       <%= render partial: "words/word", collection: @words, cached: true %>
 
       <%= render "words/noscript/pagination" %>
