--- a/app/assets/stylesheets/jpstudy/shared.scss
+++ b/app/assets/stylesheets/jpstudy/shared.scss
@@ -57,6 +57,7 @@ nav {
           float: none;
           display: flex;
           flex-direction: row;
+          padding-top: 7px;
           .icon-subtext {
             margin-left: 8px;
             font-size: 0.9em;
