Tweak tooltip text placement

--- a/app/assets/stylesheets/jpstudy/words.scss
+++ b/app/assets/stylesheets/jpstudy/words.scss
@@ -256,7 +256,8 @@
       z-index: 1;
       top: 120%;
       left: 22%;
-      margin-left: -60px;
+      margin-left: -62px;
+      margin-top: -2px;
       font-size: 0.8em;
       &::after {
         content: "";
